[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Controls/DataPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Controls/TabTitle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/SoldTransactionsLogView.gd" type="Script" id=3]
[ext_resource path="res://Scenes/SoldTransactionsLog.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="SoldTransactionLogView" type="Control" groups=[
"Tab",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -72.0
rect_min_size = Vector2( 952, 600 )
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
rect_min_size = Vector2( 952, 600 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabTitle" parent="VBoxContainer" instance=ExtResource( 2 )]

[node name="Title" parent="VBoxContainer/TabTitle/MarginContainer" index="0"]
text = "Sold Transactions Log"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 952.0
margin_bottom = 168.0
rect_min_size = Vector2( 952, 96 )

[node name="TotalGains" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 235.0
margin_bottom = 96.0

[node name="ColorRect" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer" index="0"]
margin_right = 227.0
margin_bottom = 88.0

[node name="CenterContainer" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer" index="1"]
margin_right = 227.0
margin_bottom = 88.0

[node name="VBoxContainer" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer/CenterContainer" index="0"]
margin_left = 57.0
margin_top = 12.0
margin_right = 161.0
margin_bottom = 68.0

[node name="Title" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 104.0
text = "Total Gains"

[node name="HBoxContainer" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_right = 104.0

[node name="DataLabel" parent="VBoxContainer/HBoxContainer/TotalGains/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="0"]
margin_right = 36.0
text = "$0.00"

[node name="TotalAmountPaid" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 239.0
margin_right = 474.0
margin_bottom = 96.0

[node name="ColorRect" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer" index="0"]
margin_right = 227.0
margin_bottom = 88.0

[node name="CenterContainer" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer" index="1"]
margin_right = 227.0
margin_bottom = 88.0

[node name="VBoxContainer" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer" index="0"]
margin_left = 63.0
margin_top = 12.0
margin_right = 156.0
margin_bottom = 68.0

[node name="Title" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 93.0
text = "Total Paid"

[node name="HBoxContainer" parent="VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_right = 93.0

[node name="CostAverage" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 478.0
margin_right = 713.0
margin_bottom = 96.0

[node name="ColorRect" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer" index="0"]
margin_right = 227.0
margin_bottom = 88.0

[node name="CenterContainer" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer" index="1"]
margin_right = 227.0
margin_bottom = 88.0

[node name="VBoxContainer" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer" index="0"]
margin_left = 47.0
margin_top = 12.0
margin_right = 172.0
margin_bottom = 68.0

[node name="Title" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 125.0
text = "Cost Average"

[node name="HBoxContainer" parent="VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_right = 125.0

[node name="DataPanel4" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 717.0
margin_right = 952.0
margin_bottom = 96.0

[node name="SoldTransactionsLog" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 952.0
margin_bottom = 600.0

[node name="BackgroundColor" parent="VBoxContainer/SoldTransactionsLog/MarginContainer" index="0"]
margin_bottom = 416.0

[node name="VBoxContainer" parent="VBoxContainer/SoldTransactionsLog/MarginContainer" index="1"]
margin_bottom = 416.0

[node name="ScrollContainer" parent="VBoxContainer/SoldTransactionsLog/MarginContainer/VBoxContainer" index="2"]
margin_bottom = 408.0

[node name="Trasactions" parent="VBoxContainer/SoldTransactionsLog/MarginContainer/VBoxContainer/ScrollContainer" index="0"]
margin_bottom = 288.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
[connection signal="CalculatedTotalGains" from="VBoxContainer/SoldTransactionsLog" to="." method="_on_SoldTransactionsLog_CalculatedTotalGains"]

[editable path="VBoxContainer/TabTitle"]

[editable path="VBoxContainer/HBoxContainer/TotalGains"]

[editable path="VBoxContainer/HBoxContainer/TotalAmountPaid"]

[editable path="VBoxContainer/HBoxContainer/CostAverage"]

[editable path="VBoxContainer/SoldTransactionsLog"]
